flotta-operator/operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: flotta-controller-manager
    openshift.io/cluster-monitoring: "true"
  name: flotta
