flotta-operator/operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flotta-controller-manager
  name: flotta-controller-manager-metrics-service
  namespace: flotta
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  - name: http
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app: flotta-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flotta-edge-api
  name: flotta-edge-api
  namespace: flotta
spec:
  ports:
  - name: yggds
    port: 8043
    protocol: TCP
    targetPort: yggds
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: flotta-edge-api
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: flotta-webhook-service
  namespace: flotta
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: flotta-controller-manager
