flotta-operator/operator/route-webhooks.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: flotta-edge-api
  name: flotta-edge-api
  namespace: flotta
spec:
  host: project-flotta.io
  port:
    targetPort: yggds
  tls:
    termination: passthrough
  to:
    kind: Service
    name: flotta-edge-api
    weight: 100
  wildcardPolicy: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: flotta/flotta-webhook-cert
  name: flotta-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: flotta-webhook-service
      namespace: flotta
      path: /validate-management-project-flotta-io-v1alpha1-edgedevice
  failurePolicy: Fail
  name: edgedevice.management.project-flotta.io
  rules:
  - apiGroups:
    - management.project-flotta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - EdgeDevices
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: flotta-webhook-service
      namespace: flotta
      path: /validate-management-project-flotta-io-v1alpha1-edgeworkload
  failurePolicy: Fail
  name: edgeworkload.management.project-flotta.io
  rules:
  - apiGroups:
    - management.project-flotta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - EdgeWorkloads
  sideEffects: None
